--- a/index.html
+++ b/index.html
@@ -5,20 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sen's Bio</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-site">
         <div class="half-width">
             <h1>Welcome to</h1>
         <h1><span class="clr1">Sen's</span> Branch</h1>
         <h3>About Sen</h3>
-        <p>Hi!!
-            It's me Julon... I love to coding myself as Sen. I will give you 100% support on my duty given by you.</p>
+        <p>Hi!!</p>
+        <p>It's me Julon... I love to coding myself as Sen. I will give you 100% support on my duty given by you.</p>
+        <a class="get-button" target="_none" href="https://www.linkedin.com/in/pro-sen-100b7b1a3/">Get Me</a>
         </div>
         <div class="half-width">
             <img src="web/Profile-1.png" alt="">
+            
         </div>
     </section>
+    <section class="Dream">
+        <div class="half-width">
+            <img src="web/Profile-2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>workda</h2>
+            <h3>csfklfkg</h3>
+            <p>It's me Julon... I love to coding myself as Sen. I will give you 100% support on my duty given by you.</p>
+            <a class="get-button" target="_blank" href="https://www.facebook.com/DesignSolution.ctg/">My FB Page</a>
+
+        </div>
+    </section>
+    <section class="experince">
+        <h2>Experinces</h2>
+        <div id="full-stack" class="half-width Experinces-class">
+            <h2>Graphics Design</h2>
+            <h3 class="Orange">Design Solution | Present: 5years</h3>
+            <p>ifhiahfihafihfiahifahihihaihfihaihifhaihihfaihfifhihaifhiahifhaihiafhiafhiahifahifhaihfiahfihaihfiahfihaihfiahifhaifhahifhaihfiahifhia</p>
+
+        </div>
+        <div id="For-Web" class="half-width Experinces-class">
+            <h2>Web Developer</h2>
+            <h3 class="Orange">Trained by ProgramingHero</h3>
+            <p>ajdjaojdoajodjaojdoajojdoajodjaojdojaojfoghahiyye9ryhighihaihihaigygaodaoadoudofhhodoaiudoiuofoafohofhgo9odfaohudhau</p>
+        </div>
+    </section>
+    <footer>
+        © ProSen-02-MCH-Reservs_All_Rights
+    </footer>
 </body>
 </html>
