--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="half-width">
             <h1>Welcome to</h1>
         <h1><span class="clr1">Sen's</span> Branch</h1>
-        <h3>About Sen</h3>
+        <h3>About Me</h3>
         <p>Hi!!</p>
         <p>It's me Julon... I love to coding myself as Sen. I will give you 100% support on my duty given by you.</p>
         <a class="get-button" target="_none" href="https://www.linkedin.com/in/pro-sen-100b7b1a3/">Get Me</a>
@@ -28,9 +28,10 @@
             <img src="web/Profile-2.png" alt="">
         </div>
         <div class="half-width">
-            <h2>workda</h2>
-            <h3>csfklfkg</h3>
-            <p>It's me Julon... I love to coding myself as Sen. I will give you 100% support on my duty given by you.</p>
+            <h2>Working Mission</h2>
+            <h3>Providing The Best</h3>
+            <p>My goal is to ensure the best and highest quality of service in a competitive current market.</p>
+            <p> The weight of money is zero compared to faith</p>
             <a class="get-button" target="_blank" href="https://www.facebook.com/DesignSolution.ctg/">My FB Page</a>
 
         </div>
@@ -40,17 +41,18 @@
         <div id="full-stack" class="half-width Experinces-class">
             <h2>Graphics Design</h2>
             <h3 class="Orange">Design Solution | Present: 5years</h3>
-            <p>ifhiahfihafihfiahifahihihaihfihaihifhaihihfaihfifhihaifhiahifhaihiafhiafhiahifahifhaihfiahfihaihfiahfihaihfiahifhaifhahifhaihfiahifhia</p>
+            <p style="width: auto">I have more than 5 years experience on printing service. Adobe Illustrator
+            & Photoshop update software version well operator.</p>
 
         </div>
         <div id="For-Web" class="half-width Experinces-class">
             <h2>Web Developer</h2>
             <h3 class="Orange">Trained by ProgramingHero</h3>
-            <p>ajdjaojdoajodjaojdoajojdoajodjaojdojaojfoghahiyye9ryhighihaihihaigygaodaoadoudofhhodoaiudoiuofoafohofhgo9odfaohudhau</p>
+            <p>I am proud to have learned web development from ProgrammingHero, run by Jhankar Mahboob Sir, a web developer with over 10 years experience. You can select me up on the exciting and interesting web development.</p>
         </div>
     </section>
-    <footer>
-        © ProSen-02-MCH-Reservs_All_Rights
+    <footer class="footer">
+        © ProSen_Reservs_All_Rights.02.03
     </footer>
 </body>
 </html>
